<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardView"
    android:layout_margin="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/NIS"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/nis" />

        <TextView
            android:id="@+id/name"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/gender"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/religion"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/religion" />

        <TextView
            android:id="@+id/birth_date"
            style="@style/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:text="@string/birth_date" />
    </LinearLayout>
</androidx.cardview.widget.CardView>